add moving average

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 706,
    "id": "9c576a8f",
    "metadata": {},
    "outputs": [],
@@ -98,33 +98,35 @@
     "    team_games = pd.concat(side_games_dfs).sort_values(['team', 'game_num'])\n",
     "    stacked = {col: team_games.pivot(columns='team', values=col, index='game_num').cumsum()\n",
     "               for col in list(team_games.select_dtypes(include=[np.number, bool]).columns)}\n",
+    "    stacked_features = {}\n",
     "    game_num = stacked['won'].index.values - 1\n",
     "\n",
-    "    team_wins = stacked['won'].divide(game_num, axis='rows').unstack().rename('win_pct')\n",
+    "    stacked_features['win_pct'] = stacked['won'].divide(game_num, axis='rows')\n",
     "\n",
     "    team_runs_for = stacked['score_for']\n",
-    "    team_avg_score_for = team_runs_for.divide(game_num, axis='rows').unstack().rename('avg_score_for')\n",
+    "    stacked_features['avg_score_for'] = team_runs_for.divide(game_num, axis='rows')\n",
     "\n",
     "    team_runs_against = stacked['score_against']\n",
-    "    team_avg_score_against = team_runs_against.divide(game_num, axis='rows').unstack().rename('avg_score_against')\n",
+    "    stacked_features['avg_score_against'] = team_runs_against.divide(game_num, axis='rows')\n",
     "\n",
-    "    team_era = stacked['indv_earned_runs'].divide(game_num, axis='rows').unstack().rename('era')\n",
-    "    team_whip = (stacked['opponent_H'] + stacked['opponent_BB']).divide(game_num * 9, axis='rows').unstack().rename('whip')\n",
-    "    team_fip = (stacked['opponent_HR'] * 13 + stacked['opponent_BB'] * 3 - stacked['opponent_K'] * 2).divide(\n",
-    "        game_num * 9, axis='rows').unstack().rename('fip')\n",
-    "    team_obp = ((stacked['H'] + stacked['BB'] + stacked['HBP']) / (\n",
+    "    stacked_features['era'] = stacked['indv_earned_runs'].divide(game_num, axis='rows')\n",
+    "    stacked_features['whip'] = (stacked['opponent_H'] + stacked['opponent_BB']).divide(game_num * 9, axis='rows')\n",
+    "    stacked_features['fip'] = (stacked['opponent_HR'] * 13 + stacked['opponent_BB'] * 3 - stacked['opponent_K'] * 2).divide(\n",
+    "        game_num * 9, axis='rows')\n",
+    "    stacked_features['obp'] = ((stacked['H'] + stacked['BB'] + stacked['HBP']) / (\n",
     "        stacked['AB'] + stacked['BB'] + stacked['HBP'] + stacked['SAC_FLY'])\n",
-    "    ).unstack().rename('obp')\n",
-    "    \n",
+    "    )\n",
     "    singles = stacked['H'] - stacked['HR'] - stacked['3B'] - stacked['2B']\n",
-    "    team_slg = ((singles + 2 * stacked['2B'] + 3 * stacked['3B'] + 4 * stacked['HR'])\n",
-    "        / stacked['AB']).unstack().rename('slg')\n",
+    "    stacked_features['slg'] = (singles + 2 * stacked['2B'] + 3 * stacked['3B'] + 4 * stacked['HR']) / stacked['AB']\n",
+    "    stacked_features['ops'] = stacked_features['obp'] + stacked_features['slg']\n",
+    "    stacked_features['err'] = stacked['errors'].divide(game_num, axis='rows')\n",
+    "    stacked_features['pythag'] = (team_runs_for**1.83 / (team_runs_for**1.83 + team_runs_against**1.83))\n",
     "    \n",
-    "    team_err = stacked['errors'].divide(game_num, axis='rows').unstack().rename('err')\n",
-    "    team_pythag = (team_runs_for**1.83 / (team_runs_for**1.83 + team_runs_against**1.83)).unstack().rename('pythag')\n",
-    "    team_stats = pd.concat([\n",
-    "        team_wins, team_avg_score_for, team_avg_score_against, team_era, team_whip, team_obp, team_slg, team_err, team_fip, team_pythag\n",
-    "    ], axis='columns').reset_index()\n",
+    "    team_stats = pd.concat([stacked_feature.unstack().rename(stacked_feature_name)\n",
+    "                            for stacked_feature_name, stacked_feature in stacked_features.items()] + \n",
+    "                           [stacked_feature.rolling(10).mean().unstack().rename(f'{stacked_feature_name}_10')\n",
+    "                            for stacked_feature_name, stacked_feature in stacked_features.items()],\n",
+    "                           axis='columns').reset_index()\n",
     "\n",
     "    tmp = pd.merge(\n",
     "        one_year[['date', 'home', 'away', 'home_game_num', 'away_game_num', 'home_won']],\n",
@@ -140,44 +142,127 @@
     "    games['log5'] = ((games['home_win_pct'] - (games['home_win_pct'] * games['away_win_pct'])) / (\n",
     "        games['home_win_pct'] + games['away_win_pct'] - (2 * games['home_win_pct'] * games['away_win_pct'])\n",
     "    ).replace(0, 1)).astype(float)\n",
-    "    games['pythag'] = games['home_pythag'] - games['away_pythag']\n",
-    "\n",
-    "    #     games['pred_score_home'] = np.sqrt(games['home_avg_score_for'] * games['away_avg_score_against'])\n",
-    "    #     games['pred_score_away'] = np.sqrt(games['away_avg_score_for'] * games['home_avg_score_against'])\n",
-    "    #     games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
-    "    games['era_diff'] = games['home_era'] - games['away_era']\n",
-    "    games['whip_diff'] = games['home_whip'] - games['away_whip']\n",
-    "    games['obp_diff'] = games['home_obp'] - games['away_obp']\n",
-    "    games['slg_diff'] = games['home_slg'] - games['away_slg']\n",
-    "    games['ops_diff'] = games['home_slg'] + games['home_obp'] - games['away_slg'] - games['away_obp']\n",
-    "    games['err_diff'] = games['home_err'] - games['away_err']\n",
-    "    games['fip_diff'] = games['home_fip'] - games['away_fip']\n",
-    "    return games[games['home_game_num'] > 40]"
+    "    for feature_name in stacked_features.keys():\n",
+    "        games[f'{feature_name}_diff'] = games[f'home_{feature_name}'] - games[f'away_{feature_name}']\n",
+    "        games[f'{feature_name}_diff_10'] = games[f'home_{feature_name}_10'] - games[f'away_{feature_name}_10'] # add moving average\n",
+    "    return games"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
-   "id": "45052775",
+   "execution_count": 707,
+   "id": "a824c24d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True)"
+    "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True).dropna()\n",
+    "games = games[games['home_game_num'] > 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
-   "id": "f2b600b8",
-   "metadata": {},
+   "execution_count": 721,
+   "id": "dca4071b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5606673172545192\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>log5</th>\n",
+       "      <td>0.087569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pythag_diff</th>\n",
+       "      <td>0.360754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>whip_diff</th>\n",
+       "      <td>-0.052480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ops_diff</th>\n",
+       "      <td>-0.078156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>err_diff</th>\n",
+       "      <td>0.182109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fip_diff</th>\n",
+       "      <td>-0.045618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pythag_diff_10</th>\n",
+       "      <td>-0.313480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>whip_diff_10</th>\n",
+       "      <td>-0.014027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ops_diff_10</th>\n",
+       "      <td>0.147455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>err_diff_10</th>\n",
+       "      <td>-0.230359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fip_diff_10</th>\n",
+       "      <td>-0.005716</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.5639255581123087"
+       "                    coef\n",
+       "log5            0.087569\n",
+       "pythag_diff     0.360754\n",
+       "whip_diff      -0.052480\n",
+       "ops_diff       -0.078156\n",
+       "err_diff        0.182109\n",
+       "fip_diff       -0.045618\n",
+       "pythag_diff_10 -0.313480\n",
+       "whip_diff_10   -0.014027\n",
+       "ops_diff_10     0.147455\n",
+       "err_diff_10    -0.230359\n",
+       "fip_diff_10    -0.005716"
       ]
      },
-     "execution_count": 602,
+     "execution_count": 721,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +271,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "features_list = ['log5', 'pythag', 'era_diff', 'whip_diff', 'ops_diff', 'err_diff', 'fip_diff']\n",
-    "train_size = 10000\n",
+    "feature_names = ['log5', 'pythag_diff', 'whip_diff', 'ops_diff', 'err_diff', 'fip_diff']\n",
+    "features_list = feature_names + [f'{feature_name}_10' for feature_name in feature_names[1:]]\n",
+    "\n",
+    "train_size = 20000\n",
     "\n",
     "model = LogisticRegression()\n",
     "features = games[features_list]\n",
@@ -197,14 +284,17 @@
     "\n",
     "test = games.loc[(train_size + 1):, ['home_won']]\n",
     "test['pred'] = model.predict(features.loc[(train_size + 1):,])\n",
-    "(test['pred'] == test['home_won']).sum() / test.shape[0] "
+    "print((test['pred'] == test['home_won']).sum() / test.shape[0])\n",
+    "pd.DataFrame({'coef': model.coef_[0]}, index=features_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
-   "id": "02f1fcfe",
-   "metadata": {},
+   "execution_count": 629,
+   "id": "14f4e06c",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,7 +319,6 @@
        "      <th></th>\n",
        "      <th>log5</th>\n",
        "      <th>pythag</th>\n",
-       "      <th>era_diff</th>\n",
        "      <th>whip_diff</th>\n",
        "      <th>ops_diff</th>\n",
        "      <th>err_diff</th>\n",
@@ -241,89 +330,71 @@
        "    <tr>\n",
        "      <th>log5</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.903443</td>\n",
-       "      <td>-0.696410</td>\n",
-       "      <td>-0.662497</td>\n",
-       "      <td>0.580960</td>\n",
-       "      <td>-0.325912</td>\n",
-       "      <td>-0.596195</td>\n",
-       "      <td>0.130224</td>\n",
+       "      <td>0.889346</td>\n",
+       "      <td>-0.631434</td>\n",
+       "      <td>0.577159</td>\n",
+       "      <td>-0.295374</td>\n",
+       "      <td>-0.567872</td>\n",
+       "      <td>0.120450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pythag</th>\n",
-       "      <td>0.903443</td>\n",
+       "      <td>0.889346</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.740341</td>\n",
-       "      <td>-0.697123</td>\n",
-       "      <td>0.644417</td>\n",
-       "      <td>-0.347486</td>\n",
-       "      <td>-0.627708</td>\n",
-       "      <td>0.136310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>era_diff</th>\n",
-       "      <td>-0.696410</td>\n",
-       "      <td>-0.740341</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.891257</td>\n",
-       "      <td>-0.051089</td>\n",
-       "      <td>0.241460</td>\n",
-       "      <td>0.795609</td>\n",
-       "      <td>-0.109105</td>\n",
+       "      <td>-0.676529</td>\n",
+       "      <td>0.647844</td>\n",
+       "      <td>-0.318069</td>\n",
+       "      <td>-0.603218</td>\n",
+       "      <td>0.128289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>whip_diff</th>\n",
-       "      <td>-0.662497</td>\n",
-       "      <td>-0.697123</td>\n",
-       "      <td>0.891257</td>\n",
+       "      <td>-0.631434</td>\n",
+       "      <td>-0.676529</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.096343</td>\n",
-       "      <td>0.294747</td>\n",
-       "      <td>0.762372</td>\n",
-       "      <td>-0.112626</td>\n",
+       "      <td>-0.089658</td>\n",
+       "      <td>0.276947</td>\n",
+       "      <td>0.746188</td>\n",
+       "      <td>-0.107382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ops_diff</th>\n",
-       "      <td>0.580960</td>\n",
-       "      <td>0.644417</td>\n",
-       "      <td>-0.051089</td>\n",
-       "      <td>-0.096343</td>\n",
+       "      <td>0.577159</td>\n",
+       "      <td>0.647844</td>\n",
+       "      <td>-0.089658</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.157391</td>\n",
-       "      <td>-0.127893</td>\n",
-       "      <td>0.085264</td>\n",
+       "      <td>-0.137479</td>\n",
+       "      <td>-0.112375</td>\n",
+       "      <td>0.079611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>err_diff</th>\n",
-       "      <td>-0.325912</td>\n",
-       "      <td>-0.347486</td>\n",
-       "      <td>0.241460</td>\n",
-       "      <td>0.294747</td>\n",
-       "      <td>-0.157391</td>\n",
+       "      <td>-0.295374</td>\n",
+       "      <td>-0.318069</td>\n",
+       "      <td>0.276947</td>\n",
+       "      <td>-0.137479</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.177711</td>\n",
-       "      <td>-0.055521</td>\n",
+       "      <td>0.148552</td>\n",
+       "      <td>-0.050753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fip_diff</th>\n",
-       "      <td>-0.596195</td>\n",
-       "      <td>-0.627708</td>\n",
-       "      <td>0.795609</td>\n",
-       "      <td>0.762372</td>\n",
-       "      <td>-0.127893</td>\n",
-       "      <td>0.177711</td>\n",
+       "      <td>-0.567872</td>\n",
+       "      <td>-0.603218</td>\n",
+       "      <td>0.746188</td>\n",
+       "      <td>-0.112375</td>\n",
+       "      <td>0.148552</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.109068</td>\n",
+       "      <td>-0.099941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_won</th>\n",
-       "      <td>0.130224</td>\n",
-       "      <td>0.136310</td>\n",
-       "      <td>-0.109105</td>\n",
-       "      <td>-0.112626</td>\n",
-       "      <td>0.085264</td>\n",
-       "      <td>-0.055521</td>\n",
-       "      <td>-0.109068</td>\n",
+       "      <td>0.120450</td>\n",
+       "      <td>0.128289</td>\n",
+       "      <td>-0.107382</td>\n",
+       "      <td>0.079611</td>\n",
+       "      <td>-0.050753</td>\n",
+       "      <td>-0.099941</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -331,28 +402,26 @@
        "</div>"
       ],
       "text/plain": [
-       "               log5    pythag  era_diff  whip_diff  ops_diff  err_diff  \\\n",
-       "log5       1.000000  0.903443 -0.696410  -0.662497  0.580960 -0.325912   \n",
-       "pythag     0.903443  1.000000 -0.740341  -0.697123  0.644417 -0.347486   \n",
-       "era_diff  -0.696410 -0.740341  1.000000   0.891257 -0.051089  0.241460   \n",
-       "whip_diff -0.662497 -0.697123  0.891257   1.000000 -0.096343  0.294747   \n",
-       "ops_diff   0.580960  0.644417 -0.051089  -0.096343  1.000000 -0.157391   \n",
-       "err_diff  -0.325912 -0.347486  0.241460   0.294747 -0.157391  1.000000   \n",
-       "fip_diff  -0.596195 -0.627708  0.795609   0.762372 -0.127893  0.177711   \n",
-       "home_won   0.130224  0.136310 -0.109105  -0.112626  0.085264 -0.055521   \n",
+       "               log5    pythag  whip_diff  ops_diff  err_diff  fip_diff  \\\n",
+       "log5       1.000000  0.889346  -0.631434  0.577159 -0.295374 -0.567872   \n",
+       "pythag     0.889346  1.000000  -0.676529  0.647844 -0.318069 -0.603218   \n",
+       "whip_diff -0.631434 -0.676529   1.000000 -0.089658  0.276947  0.746188   \n",
+       "ops_diff   0.577159  0.647844  -0.089658  1.000000 -0.137479 -0.112375   \n",
+       "err_diff  -0.295374 -0.318069   0.276947 -0.137479  1.000000  0.148552   \n",
+       "fip_diff  -0.567872 -0.603218   0.746188 -0.112375  0.148552  1.000000   \n",
+       "home_won   0.120450  0.128289  -0.107382  0.079611 -0.050753 -0.099941   \n",
        "\n",
-       "           fip_diff  home_won  \n",
-       "log5      -0.596195  0.130224  \n",
-       "pythag    -0.627708  0.136310  \n",
-       "era_diff   0.795609 -0.109105  \n",
-       "whip_diff  0.762372 -0.112626  \n",
-       "ops_diff  -0.127893  0.085264  \n",
-       "err_diff   0.177711 -0.055521  \n",
-       "fip_diff   1.000000 -0.109068  \n",
-       "home_won  -0.109068  1.000000  "
+       "           home_won  \n",
+       "log5       0.120450  \n",
+       "pythag     0.128289  \n",
+       "whip_diff -0.107382  \n",
+       "ops_diff   0.079611  \n",
+       "err_diff  -0.050753  \n",
+       "fip_diff  -0.099941  \n",
+       "home_won   1.000000  "
       ]
      },
-     "execution_count": 595,
+     "execution_count": 629,
      "metadata": {},
      "output_type": "execute_result"
     }
