--- a/baseball_model.ipynb
+++ b/baseball_model.ipynb
@@ -314,8 +314,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f9545433",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 33%|████████████████████████████████▎                                                                | 665/2000 [02:52<06:10,  3.60trial/s, best loss: -0.6070209653827401]"
+     ]
+    }
+   ],
+   "source": [
+    "from hyperopt import hp, fmin\n",
+    "from hyperopt import rand, tpe\n",
+    "from hyperopt import Trials\n",
+    "\n",
+    "def objective(c):\n",
+    "    model = LogisticRegression(max_iter=1000, C=c)\n",
+    "    i_train = (games['year'] < year) & (games['home_game_num'] > 53)\n",
+    "    model.fit(games.loc[i_train, features_list], games.loc[i_train, 'home_won'])\n",
+    "    i_test = (games['year'] == year) & (games['home_game_num'] > 20)\n",
+    "    test = games.loc[i_test, ['date', 'home_won', 'home_favorite', 'home_odds_close', 'away_odds_close', 'odds_close']]\n",
+    "    return -accuracy_score(test['home_won'], model.predict(games.loc[i_test, features_list]))\n",
+    "\n",
+    "# Create the algorithms\n",
+    "tpe_algo = tpe.suggest\n",
+    "tpe_trials = Trials()\n",
+    "\n",
+    "space = hp.uniform('x', 0, 6)\n",
+    "\n",
+    "tpe_best = fmin(fn=objective, space=space, algo=tpe.suggest, trials=tpe_trials, max_evals=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1222,
-   "id": "00843323",
+   "id": "7f793db2",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 1208,
-   "id": "ba2bd1bf",
+   "id": "a0183964",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 1226,
-   "id": "92c55dfb",
+   "id": "272dd52c",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 1227,
-   "id": "8f453412",
+   "id": "32ea33b5",
    "metadata": {},
    "outputs": [
     {
